# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.25.6
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce plainversion and revision attributes
	- Introduce versionsort -[pr]

*eix-0.25.5
	Artem Karimov <skybon at gmail.com>:
	- Russian translation. (Missing yet: eix --dump and most of manpage)

	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Depend on http://github.com/vaeth/push/ instead of implementing
	  a poor substitute.
	- Add German manpage
	- Improve file error handling. Make some errors fatal.
	- scripts: More compatible usage of cd/mkdir, speed up tests for -z/-n
	- eix-functions.sh: Make eval_gettext safe
	- Use waitpid() in a more compatible manner
	- No longer support gnu++0x or c++0x which breaks with gcc-4.4, see
	  http://bugs.gentoo.org/show_bug.cgi?id=414979

*eix-0.25.4
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce -y (--any) to select any match field: don't miss anything.
	- Default format: new properties/restrictions separator: */^
	  Also add $sep (a tab) after version with --versionlines
	  Remove duplicate FORMAT_AFTER_IUSE (a long standing regression)
	- Fix eix-installed-after (regression introduced in eix-0.24.0)
	- Set umask 002 in eix-update unless option -o is used, see
	  http://bugs.gentoo.org/show_bug.cgi?id=408509
	- Try to fix permissions on interix, see
	  http://bugs.gentoo.org/show_bug.cgi?id=410205
	  Thanks to Gordon Cowie <gcowie at live.com> and
	  Fabian Groffen <grobian at gentoo.org>
	- Rely on working delete 0; should speed up things slightly
	- Avoid std::auto_ptr
	- Default to most current C++ dialect and use nullptr if possible
	- Add some more ATTRIBUTE_PURE
	- configure.ac: Fix usage of MV_APPEND
	- scripts: Simplify quoting slightly

*eix-0.25.3
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- Introduce eix-drop-permissions and use it for eix-remote
	  instead of su/sudo hacks.
	- Fix regressions: eix-remote add|fetch without temporary file,